...
                }
            }
        }
    }
}

const val ADD_PRODUCT_BUTTON_TEST_TAG = "product-list-add-button"
const val PRODUCT_LIST_TEST_TAG = "product-list"

fun productListItemTestTag(productId: Long) = "product-list-item-$productId"

